--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@formkit/tempo": "^0.1.2",
     "date-fns": "^3.6.0",
     "next": "14.1.4",
     "react": "^18",
