--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "max-len": [
+      "error",
+      { "code": 140, "tabWidth": 2, "ignoreUrls": true, "ignoreStrings": true }
+    ]
+  }
 }
