--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^3.6.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
